--- a/package.json
+++ b/package.json
@@ -41,13 +41,11 @@
     "vite": "^6.3.5",
     "vite-plugin-dts": "^4.5.4",
     "vitepress": "^1.6.3",
-    "vue-tsc": "^2.2.8"
+    "vue-tsc": "^2.2.8",
+    "@tailwindcss/vite": "^4.1.11",
+    "tailwindcss": "^4.1.11"
   },
   "peerDependencies": {
     "vue": "^3.5.0"
-  },
-  "dependencies": {
-    "@tailwindcss/vite": "^4.1.11",
-    "tailwindcss": "^4.1.11"
   }
 }
